--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kindergarten-helper",
   "version": "0.1.0",
+  "homepage": "https://cheeseshadow.github.io/kindergarten_helper",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
