--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
