--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://cheeseshadow.github.io/kindergarten_helper",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
