--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -12,11 +13,13 @@
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
+    "@types/react-alert": "^5.2.0",
     "@types/react-dom": "^16.9.10",
     "@types/styled-components": "^5.1.7",
     "fuse.js": "^6.4.6",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
