--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "react-alert": "^7.0.2",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
-    "xlsx": "^0.16.9"
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
